<resources>
    <string name="app_name">My Application</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="sure">Sure</string>
    <string name="private_title">private</string>
    <string name="chat_room_name">Chat Room Name</string>
    <string name="create_a_chatroom">Create A ChatRoom</string>
    <string name="kati">kati</string>
    <string name="login">Login:</string>
    <string name="login_with_google">Login With Google</string>
    <string name="kapoio_onoma">Kapoio Onoma</string>
    <string name="cpt_meow">Cpt Meow</string>
</resources>
