<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_chat_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:contentPadding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/private_title"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_chatroom_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kapoio_onoma"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_sender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/cpt_meow"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>