<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ffffffff"
    android:layout_height="250dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/a"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:layout_alignParentStart="true"
        app:srcCompat="@mipmap/ic_chat_room_password_dialog"
        android:layout_alignParentLeft="true"
        android:contentDescription="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_dialog"
        android:layout_alignStart="@+id/text_dialog"
        android:layout_below="@+id/text_dialog"
        android:layout_toEndOf="@+id/textView"
        android:maxEms="16"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_alignRight="@+id/text_dialog"
        android:layout_alignLeft="@+id/text_dialog"
        android:layout_toRightOf="@+id/textView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/text_dialog" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/text_dialog" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_dialog_cancel"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffffff"
        android:backgroundTint="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_height="35dp"
        android:layout_below="@+id/et_password"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/next"
        android:id="@+id/btn_dialog_next"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffffff"
        android:backgroundTint="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_height="35dp"
        android:layout_below="@+id/et_password"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/et_password" />

</RelativeLayout>